Renaming scala AI DSL (#116)
* Adds how to run examples in Scala

* DSL using 'ai' instead of AI